--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -57,3 +57,14 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+.clear {
+  border-radius: 15px;
+  padding: 10px;
+  margin: 20px;
+  font-size: 150%;
+}
+
+.clear:hover {
+  background-color: rgb(243, 96, 96);
+}
